bug fix -- scroll trap stuck without scrollable distance to control component

--- a/latest/frontend/css/app.css
+++ b/latest/frontend/css/app.css
@@ -712,7 +712,7 @@
 .new-timer-form .slot .input-slot {
   position: relative;
   overflow-y: scroll;
-  overscroll-behavior: none;
+  overscroll-behavior: contain;
   border-radius: 2px;
   border: 1px solid rgba(204, 204, 204, 0.8196078431);
   background-color: transparent;
@@ -726,11 +726,11 @@
 .new-timer-form .slot .ph-scroll-trap {
   width: 30px;
   position: absolute;
-  top: -500px;
+  top: -1000px;
   z-index: 100;
-  height: 1500px;
-  border-top: 1px solid transparent;
-  border-bottom: 2px solid transparent;
+  height: 10000px;
+  border-top: 1px solid red;
+  border-bottom: 2px solid blue;
 }
 .new-timer-form .slot .ph-scroll {
   width: 30px;
