--- a/latest/frontend/scss/components/_new-timer-form.scss
+++ b/latest/frontend/scss/components/_new-timer-form.scss
@@ -99,7 +99,7 @@
         .input-slot {
             position: relative;
             overflow-y: scroll;
-            overscroll-behavior: none;
+            overscroll-behavior: contain;
             border-radius: 2px;
             border: 1px solid #ccccccd1;
             background-color: transparent;
@@ -114,11 +114,12 @@
         .ph-scroll-trap {
             width: 30px;
             position: absolute;
-            top: -500px;
+            top: -1000px;
             z-index: 100;
-            height: 1500px;
-            border-top: 1px solid transparent;
-            border-bottom: 2px solid transparent;
+            height: 10000px;
+            border-top: 1px solid red;
+            border-bottom: 2px solid blue;
+
         }
         .ph-scroll {
             width: 30px;
